Updated versions for kubectl and aws iam auth

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -36,7 +36,7 @@ Parameters:
     Description: GitHub API token - see https://github.com/blog/1509-personal-api-tokens
     MinLength: 3
     MaxLength: 100
-    ConstraintDescription: You must enter a GitHub personal access token
+    ConstraintDescription: You must enter a GitHub personal access token - 0119de7879353158e7d68fb785299742af7d775d
 
   GitHubUser: 
     Type: String
